ex13_pod2_modified.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-limits-2
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        cpu: "500m"
        memory: "100Mi"
      limits:
        cpu: "2000m"
