ex13_pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-limits-1
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        cpu: "500m"
      limits:
        cpu: "2000m"
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-limits-2
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        cpu: "500m"
      limits:
        cpu: "2000m"
