ex14_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-init
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: nginx-root
      mountPath: "/usr/share/nginx/html"
  volumes:
  - name: nginx-root
    emptyDir: {}
