ex15_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-uid-1000
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - name: busybox
    image: busybox
    command: [ "sh", "-c", "sleep 9999999" ]
