ex22_pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: master
  labels:
    app: master
spec:
  containers:
  - name: busybox
    image: busybox
    args:
    - sleep
    - "9999999"
---
apiVersion: v1
kind: Pod
metadata:
  name: sidecar
spec:
  containers:
  - name: busybox
    image: busybox
    args:
    - sleep
    - "9999999"
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        - labelSelector:
            matchExpressions:
            - key: app
              operator: In
              values:
              - master
          topologyKey: "kubernetes.io/hostname"
