ex8_pod_secretEnv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-secret-env
spec:
  containers:
    - name: busybox
      image: busybox
      command: [ "/bin/sh", "-c", "env" ] # once the pod is completed run 'kubectl logs busybox-secret-vol' to see this output
  restartPolicy: Never
