ex8_pod_secretVol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-secret-vol
spec:
  containers:
    - name: busybox
      image: busybox
      command: [ "/bin/sh", "-c", "ls -lRt /etc/secret-volume && cat /etc/secret-volume/USERNAME && cat /etc/secret-volume/PASSWORD" ] # once the pod is completed run 'kubectl logs busybox-secret-vol' to see this output
      volumeMounts:
      - name: secret-volume
        readOnly: true
        mountPath: "/etc/secret-volume"
  restartPolicy: Never
  volumes:
  - name: secret-volume
    secret:
      secretName: minisecret
