ex17_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: nginx-ingress.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: nginx-ingress-service-1
          servicePort: 80
      - path: /bar
        backend:
          serviceName: nginx-ingress-service-2
          servicePort: 80
